objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <description>Contact account name or lead company name.</description>
        <formula>IF( null != ContactId , Contact.Account.Name , Lead.Company)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzTechField_Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_chargement_VF__c</fullName>
        <label>Date chargement VF</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Renvoie l&apos;email du contact ou du lead.</description>
        <formula>IF( null != ContactId , Contact.Email , Lead.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzTechField_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembreExistant__c</fullName>
        <description>Vérifie si la date de chargement VF est nulle ou strictement inférieure à la date de dernière modification.</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzTechField_MembreExistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Nom complet</description>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzTechField_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reprise_LOT2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise LOT2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title du contact ou du lead.</description>
        <formula>IF( null != ContactId , Contact.Title, Lead.Title )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzTechField_Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type: Contact ou Piste</description>
        <formula>IF( null != ContactId , &apos;Contact&apos; , &apos;Piste&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzTechField_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__email__c</fullName>
        <formula>IF( null != ContactId ,  Contact.Email ,  Lead.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__recipient_id__c</fullName>
        <description>internal field: Recipient ID from Inxmail Professional</description>
        <externalId>true</externalId>
        <label>Recipient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__synchronization_id__c</fullName>
        <label>synchronization_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>inx__permit_adding_members</fullName>
        <active>true</active>
        <description>Do not allow adding members to connected campaigns which have &quot;keep in sync&quot; disabled.</description>
        <errorConditionFormula>LEN( TEXT(CreatedDate ))= 0  &amp;&amp;  Campaign.inx__connect_with_Inxmail__c &amp;&amp;  Campaign.inx__keep_in_sync__c  = false</errorConditionFormula>
        <errorMessage>You cannot add members to connected campaigns. Please disconnect the campaign first.</errorMessage>
    </validationRules>
</CustomObject>